@@ -18,12 +18,13 @@
 package me.desht.pneumaticcraft.client.gui.remote;
 
 import me.desht.pneumaticcraft.client.gui.remote.actionwidget.*;
-import net.minecraft.client.gui.widget.Widget;
-import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraftforge.common.util.Constants;
+import net.minecraft.client.gui.components.AbstractWidget;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.Tag;
+import net.minecraft.world.item.ItemStack;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -34,6 +35,8 @@ public class RemoteLayout {
     private final List<ActionWidget<?>> actionWidgets = new ArrayList<>();
     private static final Map<String, Class<? extends ActionWidget<?>>> registeredWidgets = new HashMap<>();
 
+    // FIXME don't need reflection shenanigans here
+
     static {
         registerWidget(ActionWidgetCheckBox.class);
         registerWidget(ActionWidgetLabel.class);
@@ -43,21 +46,21 @@ public class RemoteLayout {
 
     private static void registerWidget(Class<? extends ActionWidget<?>> widgetClass) {
         try {
-            ActionWidget<?> widget = widgetClass.newInstance();
+            ActionWidget<?> widget = widgetClass.getDeclaredConstructor().newInstance();
             registeredWidgets.put(widget.getId(), widgetClass);
             return;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
         throw new IllegalArgumentException("Widget " + widgetClass + " couldn't be registered");
     }
 
     public RemoteLayout(ItemStack remote, int guiLeft, int guiTop) {
-        CompoundNBT tag = remote.getTag();
+        CompoundTag tag = remote.getTag();
         if (tag != null) {
-            ListNBT tagList = tag.getList("actionWidgets", Constants.NBT.TAG_COMPOUND);
+            ListTag tagList = tag.getList("actionWidgets", Tag.TAG_COMPOUND);
             for (int i = 0; i < tagList.size(); i++) {
-                CompoundNBT widgetTag = tagList.getCompound(i);
+                CompoundTag widgetTag = tagList.getCompound(i);
                 String id = widgetTag.getString("id");
                 Class<? extends ActionWidget<?>> clazz = registeredWidgets.get(id);
                 try {
@@ -71,10 +74,10 @@ public class RemoteLayout {
         }
     }
 
-    public CompoundNBT toNBT(int guiLeft, int guiTop) {
-        CompoundNBT tag = new CompoundNBT();
+    public CompoundTag toNBT(int guiLeft, int guiTop) {
+        CompoundTag tag = new CompoundTag();
 
-        ListNBT tagList = new ListNBT();
+        ListTag tagList = new ListTag();
         for (ActionWidget<?> actionWidget : actionWidgets) {
             tagList.add(actionWidget.toNBT(guiLeft, guiTop));
         }
@@ -90,8 +93,8 @@ public class RemoteLayout {
         return actionWidgets;
     }
 
-    public List<Widget> getWidgets(boolean filterDisabledWidgets) {
-        List<Widget> widgets = new ArrayList<>();
+    public List<AbstractWidget> getWidgets(boolean filterDisabledWidgets) {
+        List<AbstractWidget> widgets = new ArrayList<>();
         for (ActionWidget<?> actionWidget : actionWidgets) {
             if (!filterDisabledWidgets || actionWidget.isEnabled()) {
                 widgets.add(actionWidget.getWidget());
